# SamHowes

./: .gitignore  BUILD.bazel  Bazel.props  Directory.Build.props  Directory.Build.targets  Directory.Solution.props  Directory.Solution.targets  Extensions.sln  LICENSE  README.md  WORKSPACE  push.sh  samhowes.sln  samhowes.sln.DotSettings
Collections/: Collections.csproj  Heap.cs  OrderedSet.cs  README.md
Configuration/Yaml/: Yaml.csproj  YamlConfigurationExtensions.cs  YamlConfigurationFileParser.cs  YamlConfigurationProvider.cs
DependencyInjection/CodeGen/: BUILD.bazel  CodeGen.csproj  Program.cs
DependencyInjection/IO/: BUILD.bazel
DependencyInjection/Modules/: DepSet.cs  IInjectorBuilder.cs  InjectionModule.cs  Injector.cs  InjectorBuilder.cs  Modules.csproj  README.md
DependencyInjection/Modules.Web/: Modules.Web.csproj  Readme.md  WebInjectorBuilder.cs
EntityFrameworkCore/Codegen/: BUILD.bazel  Codegen.csproj
Extensions/Configuration/Yaml/: BUILD.bazel  YamlConfigurationSource.cs  YamlStreamConfigurationProvider.cs  YamlStreamConfigurationSource.cs
Extensions/DependencyInjection/CodeGen/: BUILD.bazel  CodeGen.csproj  Program.cs
Extensions/DependencyInjection/IO/: BUILD.bazel  Files.cs
Extensions/EntityFrameworkCore/Codegen/: Program.cs
Tests/Collections/: Collections.csproj  HeapTest.cs  OrderedSetTest.cs
Tests/Configuration/Yaml/: BUILD.bazel  Yaml.csproj  YamlConfigurationParserTests.cs
Tests/DependencyInjection/Modules/: Configuration.yaml  DepSetTests.cs  DependenciesTest.cs  InjectionModuleTest.cs  Modules.csproj  OverridingConfiguration.yaml
Tests/Extensions/Configuration/Yaml/: BUILD.bazel  Yaml.csproj  YamlConfigurationParserTests.cs
Tests/Extensions/EntityFrameworkCore/Codegen/: BUILD.bazel  Codegen.csproj  GeneratorTests.cs
