# bzl:generated start
load("@rules_msbuild//dotnet:defs.bzl", "msbuild_directory")
load("@rules_msbuild//tools:gazelle.bzl", "gazelle")

msbuild_directory(
    name = "msbuild_defaults",
    srcs = [
        "Bazel.props",
        "Bazel.targets",
        "Directory.Build.props",
        "Directory.Build.targets",
        "Directory.Solution.props",
        "Directory.Solution.targets",
    ],
    assembly_name_prefix = "SamHowes.Extensions",
    use_bazel_package_for_assembly_name = True,
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
    args = [
        "--deps_macro=deps/nuget.bzl%nuget_deps",
        "--srcs_mode=explicit",
    ],
)

# bzl:generated end
